# layton

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  UPGRADE.md  VISION.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/commands/opsx/: apply.md  archive.md  bulk-archive.md  continue.md  explore.md  ff.md  new.md  onboard.md  sync.md  verify.md
.claude/skills/openspec-bulk-archive-change/: SKILL.md
.claude/skills/openspec-continue-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-onboard/: SKILL.md
.github/workflows/: ci.yml
openspec/specs/bead-protocols/: spec.md
openspec/specs/bead-scheduling/: spec.md
openspec/specs/bead-templates/: spec.md
openspec/specs/beads-conventions/: spec.md
openspec/specs/briefing-protocol/: spec.md
openspec/specs/cli-framework/: spec.md
openspec/specs/focus-protocol/: spec.md
openspec/specs/gather-protocol/: spec.md
openspec/specs/protocol-system/: spec.md
openspec/specs/setup-protocol/: spec.md
openspec/specs/skill-inventory/: spec.md
skills/layton/: README.md  SKILL.md
skills/layton/laytonlib/: cli.py  (+5 more)
tests/: conftest.py
tests/e2e/: test_beads_e2e.py  test_config_e2e.py  test_context_e2e.py  test_doctor_e2e.py  test_orientation_e2e.py  test_protocols_e2e.py  test_rolodex_e2e.py  test_skills_e2e.py  test_workflows_e2e.py
tests/unit/: test_beads.py  test_config.py  test_context.py  test_doctor.py  test_project_instructions.py  test_protocols.py  test_rolodex.py  test_skills.py  test_workflows.py
(+71 files in other folders)
