[project]
name = "layton"
version = "2.0.2"
description = "Personal AI secretary for attention management - Claude Code skill"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest", "syrupy", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
